small_data _gpt_1

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -38,18 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "84f4c0dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv(\"Bhagwad_Gita.csv\")"
+    "df=pd.read_csv(\"Bhagwad_Gita.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d2660c58",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "4  1.5 धृष्टकेतुः Dhrishtaketu? चेकितानः Chekitan...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fca217a1",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e9e1a1fe",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1d24d726",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5452ad02",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "4  1.5 धृष्टकेतुः Dhrishtaketu? चेकितानः Chekitan...       []   []              "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "092c405a",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e5b88d4b",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e3c7b94b",
    "metadata": {},
    "outputs": [],
@@ -498,8 +498,344 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f77239f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 72 entries, 47 to 118\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   ID               72 non-null     object\n",
+      " 1   chapter          72 non-null     int64 \n",
+      " 2   verse            72 non-null     int64 \n",
+      " 3   shloka           72 non-null     object\n",
+      " 4   transliteration  72 non-null     object\n",
+      " 5   meaning_hindi    72 non-null     object\n",
+      " 6   meaning_english  72 non-null     object\n",
+      " 7   word_meaning     72 non-null     object\n",
+      " 8   category         72 non-null     object\n",
+      " 9   tags             72 non-null     object\n",
+      " 10  explanation      72 non-null     object\n",
+      "dtypes: int64(2), object(9)\n",
+      "memory usage: 6.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for Chapter 2\n",
+    "df_chapter2 = df[df['chapter'] == 2].copy()  # Use .copy() to avoid SettingWithCopyWarning\n",
+    "df_chapter2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "17068b63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_chapter2.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e38ddb1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of verses in Chapter 2: 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of verses in Chapter 2: {len(df_chapter2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7d75c397",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'chapter', 'verse', 'shloka', 'transliteration', 'meaning_hindi',\n",
+       "       'meaning_english', 'word_meaning', 'category', 'tags', 'explanation'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_chapter2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1b6b5db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_chapter2.drop(columns=['transliteration','meaning_hindi','word_meaning'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "968f5bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>chapter</th>\n",
+       "      <th>verse</th>\n",
+       "      <th>shloka</th>\n",
+       "      <th>meaning_english</th>\n",
+       "      <th>category</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BG2.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>सञ्जय उवाच |\\nतं तथा कृपयाविष्टमश्रुपूर्णाकुले...</td>\n",
+       "      <td>2.1 Sanjaya said  To him who was thus overcome...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BG2.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>श्रीभगवानुवाच |\\nकुतस्त्वा कश्मलमिदं विषमे समु...</td>\n",
+       "      <td>2.2 The Blessed Lord said  Whence is this peri...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BG2.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>क्लैब्यं मा स्म गमः पार्थ नैतत्त्वय्युपपद्यते ...</td>\n",
+       "      <td>2.3 Yield not to impotence, O Arjuna, son of P...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BG2.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>अर्जुन उवाच |\\nकथं भीष्ममहं सङ्ख्ये द्रोणं च म...</td>\n",
+       "      <td>2.4 Arjuna said  How, O Madhusudana, shall I f...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BG2.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>गुरूनहत्वा हि महानुभावान्\\nश्रेयो भोक्तुं भैक्...</td>\n",
+       "      <td>2.5 Better it is, indeed, in this world to acc...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>BG2.68</td>\n",
+       "      <td>2</td>\n",
+       "      <td>68</td>\n",
+       "      <td>तस्माद्यस्य महाबाहो निगृहीतानि सर्वशः |\\nइन्द्...</td>\n",
+       "      <td>2.68 Therefore, O mighty-armed Arjuna, his kno...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>BG2.69</td>\n",
+       "      <td>2</td>\n",
+       "      <td>69</td>\n",
+       "      <td>या निशा सर्वभूतानां तस्यां जागर्ति संयमी |\\nयस...</td>\n",
+       "      <td>2.69 That which is night to all beings, in tha...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>BG2.70</td>\n",
+       "      <td>2</td>\n",
+       "      <td>70</td>\n",
+       "      <td>आपूर्यमाणमचलप्रतिष्ठं\\nसमुद्रमापः प्रविशन्ति य...</td>\n",
+       "      <td>2.70 He attains peace into whom all desires en...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>BG2.71</td>\n",
+       "      <td>2</td>\n",
+       "      <td>71</td>\n",
+       "      <td>विहाय कामान्यः सर्वान्पुमांश्चरति निःस्पृहः |\\...</td>\n",
+       "      <td>2.71 That man attains peace who, abandoning al...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>BG2.72</td>\n",
+       "      <td>2</td>\n",
+       "      <td>72</td>\n",
+       "      <td>एषा ब्राह्मी स्थितिः पार्थ नैनां प्राप्य विमुह...</td>\n",
+       "      <td>2.72 This is the Brahmic seat (eternal state),...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID  chapter  verse                                             shloka  \\\n",
+       "0    BG2.1        2      1  सञ्जय उवाच |\\nतं तथा कृपयाविष्टमश्रुपूर्णाकुले...   \n",
+       "1    BG2.2        2      2  श्रीभगवानुवाच |\\nकुतस्त्वा कश्मलमिदं विषमे समु...   \n",
+       "2    BG2.3        2      3  क्लैब्यं मा स्म गमः पार्थ नैतत्त्वय्युपपद्यते ...   \n",
+       "3    BG2.4        2      4  अर्जुन उवाच |\\nकथं भीष्ममहं सङ्ख्ये द्रोणं च म...   \n",
+       "4    BG2.5        2      5  गुरूनहत्वा हि महानुभावान्\\nश्रेयो भोक्तुं भैक्...   \n",
+       "..     ...      ...    ...                                                ...   \n",
+       "67  BG2.68        2     68  तस्माद्यस्य महाबाहो निगृहीतानि सर्वशः |\\nइन्द्...   \n",
+       "68  BG2.69        2     69  या निशा सर्वभूतानां तस्यां जागर्ति संयमी |\\nयस...   \n",
+       "69  BG2.70        2     70  आपूर्यमाणमचलप्रतिष्ठं\\nसमुद्रमापः प्रविशन्ति य...   \n",
+       "70  BG2.71        2     71  विहाय कामान्यः सर्वान्पुमांश्चरति निःस्पृहः |\\...   \n",
+       "71  BG2.72        2     72  एषा ब्राह्मी स्थितिः पार्थ नैनां प्राप्य विमुह...   \n",
+       "\n",
+       "                                      meaning_english category tags  \\\n",
+       "0   2.1 Sanjaya said  To him who was thus overcome...       []   []   \n",
+       "1   2.2 The Blessed Lord said  Whence is this peri...       []   []   \n",
+       "2   2.3 Yield not to impotence, O Arjuna, son of P...       []   []   \n",
+       "3   2.4 Arjuna said  How, O Madhusudana, shall I f...       []   []   \n",
+       "4   2.5 Better it is, indeed, in this world to acc...       []   []   \n",
+       "..                                                ...      ...  ...   \n",
+       "67  2.68 Therefore, O mighty-armed Arjuna, his kno...       []   []   \n",
+       "68  2.69 That which is night to all beings, in tha...       []   []   \n",
+       "69  2.70 He attains peace into whom all desires en...       []   []   \n",
+       "70  2.71 That man attains peace who, abandoning al...       []   []   \n",
+       "71  2.72 This is the Brahmic seat (eternal state),...       []   []   \n",
+       "\n",
+       "   explanation  \n",
+       "0               \n",
+       "1               \n",
+       "2               \n",
+       "3               \n",
+       "4               \n",
+       "..         ...  \n",
+       "67              \n",
+       "68              \n",
+       "69              \n",
+       "70              \n",
+       "71              \n",
+       "\n",
+       "[72 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_chapter2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "88bda411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 72 shlokas to chap2.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "chap_2=df_chapter2.to_dict(orient=\"records\")\n",
+    "with open(\"chap2.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(chap_2, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(f\"Saved {len(chap_2)} shlokas to chap2.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f108d570",
    "metadata": {},
    "outputs": [],
    "source": []
