small_data_gpt_2

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -834,11 +834,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f108d570",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "with open(\"chap2.json\", \"r\") as f:  # Replace with actual filename\n",
+    "    shloka_data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "93d02941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q sentence-transformers\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "09273382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/bhagvad-gita-ai/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb84037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68b48023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shloka_texts = [entry[\"explanation\"] + \" \" + \" \".join(entry[\"tags\"]) for entry in shloka_data]\n",
+    "shloka_embeddings = model.encode(shloka_texts, convert_to_tensor=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b64a7531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q sentence-transformers\n",
+    "import torch  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35884e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_problem = input(\"Enter your problem or question (in English): \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b16f32e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_embedding = model.encode(user_problem, convert_to_tensor=True)\n",
+    "cosine_scores = util.pytorch_cos_sim(query_embedding, shloka_embeddings)\n",
+    "\n",
+    "# Get top 3 matches\n",
+    "top_k = 3\n",
+    "top_results = torch.topk(cosine_scores, k=top_k)\n",
+    "\n",
+    "for idx, score in zip(top_results.indices[0], top_results.values[0]):\n",
+    "    entry = shloka_data[idx]\n",
+    "    print(f\"\\n🔹 Match Score: {score.item():.2f}\")\n",
+    "    print(f\"🕉️ Shloka: {entry['shloka']}\")\n",
+    "    print(f\"📖 Meaning: {entry['meaning_english']}\")\n",
+    "    print(f\"🧘 Explanation: {entry['explanation']}\")\n",
+    "    print(f\"🏷️ Tags: {entry['tags']}\")\n",
+    "    print(f\"📚 Category: {entry['category']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a8f1588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only the top result\n",
+    "top_index = top_results.indices[0][0]\n",
+    "entry = shloka_data[top_index]\n",
+    "\n",
+    "print(\"\\n🕉️ Solution to Your Problem Based on Bhagavad Gita:\\n\")\n",
+    "print(\"💡 Here's what Lord Krishna teaches:\\n\")\n",
+    "\n",
+    "print(f\"📌 *{entry.get('explanation', 'Explanation not found')}*\\n\")\n",
+    "print(f\"📜 Shloka (Sanskrit): {entry.get('shloka', 'N/A')}\\n\")\n",
+    "\n",
+    "print(f\"🗣️ Meaning (English): {entry.get('eng_meaning', 'Not available')}\\n\")\n",
+    "print(f\"🔖 Category: {entry.get('category', 'Unknown')} | 🏷️ Tags: {', '.join(entry.get('tags', []))}\")\n",
+    "print(\"=\" * 80)\n"
+   ]
   }
  ],
  "metadata": {
